Made OpenAPI more leading by adding dynamic ID's. DAT-3416
